[package]
name = "bitblazr"
version = "0.4.2"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = { version = "0.2" }
bitblazr-common = { path = "../bitblazr-common", features = ["user"] }
anyhow = "1"
libc = "0.2"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "sync"] }
bytes = "1.5"
config = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
moka = { version = "0.12", features = ["future"] }
chrono = "0.4"
thiserror = "1.0.57"
aho-corasick = "1.1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "json"] }
tracing-appender = "0.2"
no-std-net = "0.6"
paho-mqtt = { version = "0.12", features=["vendored-ssl"] }
clap = { version = "4.5", features=["derive"] }
names = { version = "0.14", default-features = false }
cloudevents-sdk = "0.7"
rand = "0.8"
hex = "0.4"

[[bin]]
name = "bitblazr"
path = "src/main.rs"
