[package]
name = "bpfshield"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
bpfshield-common = { path = "../bpfshield-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.5"
config = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.5"
moka = { version = "0.12", features = ["future"] }
chrono = "0.4"
thiserror = "1.0.57"
aho-corasick = "1.1"

[[bin]]
name = "bpfshield"
path = "src/main.rs"
