[package]
name = "bpfshield"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = { version = "0.2" }
bpfshield-common = { path = "../bpfshield-common", features = ["user"] }
anyhow = "1"
libc = "0.2"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.5"
config = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.5"
moka = { version = "0.12", features = ["future"] }
chrono = "0.4"
thiserror = "1.0.57"
aho-corasick = "1.1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "json"] }
tracing-appender = "0.2"

[[bin]]
name = "bpfshield"
path = "src/main.rs"
